--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".WallpapersList.UI.ListFragment">
 
+    <TextView
+        android:id="@+id/resultResponseTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button"
