--- a/app/src/main/res/layout/activity_select_wallpaper.xml
+++ b/app/src/main/res/layout/activity_select_wallpaper.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PickUpWallpaper.UI.SelectedWallpaperActivity">
+    tools:context=".PickUpWallpaper.UI.SelectWallpaperActivity">
+
+
+    <fragment
+        android:id="@+id/nav_host"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph_pick_up_wallpaper"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
