Send image at PickUp Activity
Add data class to send in bundle
Save bitmap in cashe folder to get it at new activity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
     <style name="Theme.WallpaperInstallApp" parent="Base.Theme.WallpaperInstallApp" />
 
 
+    <style name="Base.Theme.WallpaperInstallApp.FullScreen">
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
     <style name="roundImageView">
 
         <item name="cornerFamily">rounded</item>
