--- a/app/src/main/res/layout/fragment_select_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_select_wallpaper.xml
@@ -8,16 +8,34 @@
     tools:context=".PickUpWallpaper.UI.SelectWallpaperFragment">
 
 
-    <ImageView
-        android:id="@+id/background_image"
+    <FrameLayout
+        android:id="@+id/image_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/test_image"
-        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/background_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="matrix"
+            android:background="@color/black"
+            android:clickable="true"
+            android:focusable="true"
+            tools:src="@drawable/test_fit_image"
+            tools:ignore="MissingConstraints" />
+
+    </FrameLayout>
+
+    <ProgressBar
+        android:id="@+id/loadbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="50dp"
+        android:visibility="visible"/>
 
     <ImageButton
         android:id="@+id/settingsWallpaper"
