--- a/app/src/main/res/layout/fragment_select_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_select_wallpaper.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="matrix"
-            android:background="@color/black"
+            android:background="@color/white"
             android:clickable="true"
             android:focusable="true"
             tools:src="@drawable/test_fit_image"
@@ -32,10 +32,16 @@
 
     <ProgressBar
         android:id="@+id/loadbar"
+        style="@style/Base.Theme.WallpaperInstallApp.progressBars"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="50dp"
-        android:visibility="visible"/>
+        android:visibility="visible"
+
+        app:layout_constraintBottom_toTopOf="@+id/image_container"
+        app:layout_constraintEnd_toStartOf="@+id/image_container"
+        app:layout_constraintStart_toEndOf="@+id/image_container"
+        app:layout_constraintTop_toBottomOf="@+id/image_container" />
 
     <ImageButton
         android:id="@+id/settingsWallpaper"
