Add Set Wallpaper View Model and start setting wallpaper

--- a/app/src/main/res/layout/fragment_select_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_select_wallpaper.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/image_container" />
 
     <ImageButton
-        android:id="@+id/settingsWallpaper"
+        android:id="@+id/settingsWallpaperButton"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginBottom="50dp"
