--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,6 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".WallpapersList.UI.ListFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/reloadContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reload images?"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@+id/reloadButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="50dp"/>
+
+        <ImageButton
+            android:id="@+id/reloadButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="150dp"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="Reload"
+            android:scaleType="centerCrop"
+            android:src="@drawable/baseline_refresh_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <ProgressBar
         android:id="@+id/loadbar"
         android:layout_width="match_parent"
