--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.zdy.wallpaperinstallapp.WallpapersList.WebList.UI.ListFragment"
+        android:name="com.zdy.wallpaperinstallapp.WallpapersList.WebList.UI.ListFragmentWeb"
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" >
         <action
