Add web classes
1) Add webclasses
2) Add font Bicubik
3) Interface changes

--- a/app/src/main/res/layout/item_button_layout.xml
+++ b/app/src/main/res/layout/item_button_layout.xml
@@ -2,13 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageButton
         android:id="@+id/refresh_button"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/baseline_refresh_24"
-         />
+        android:layout_height="match_parent"
+        android:background="#00FFFFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/baseline_refresh_24" />
 
 </FrameLayout>
