--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/reloadContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         tools:visibility="gone">
 
 
@@ -17,25 +18,27 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:text="Reload images?"
+            android:layout_marginTop="100dp"
+            android:text="@string/failedtoload"
             android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/reloadButton"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/reloadButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginBottom="150dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="Reload"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:src="@drawable/baseline_refresh_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ProgressBar
