--- a/app/src/main/res/layout/item_image_layout.xml
+++ b/app/src/main/res/layout/item_image_layout.xml
@@ -38,21 +38,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/roundImageView" />
 
-            <ImageButton
-                android:id="@+id/like_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-
+            <include
+                android:id="@+id/include_like_button"
+                layout="@layout/like_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/shape_radius"
-                android:backgroundTint="@color/black"
-                android:scaleType="centerCrop"
-                android:src="@drawable/like_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-
                 />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -61,8 +57,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:paddingHorizontal="50dp"
-            android:lines="1"
+            android:paddingHorizontal="20dp"
+            android:lines="2"
             android:ellipsize="end"
             android:layout_marginTop="5dp"
             tools:text="Test Hardcored text bla bla bla bla bla bla bla bla"
