Add Liked wallpaper menu
1) Add Liked wallpaper menu
2) Add Action bar navigation
3) Add Delete wallpaper from local database

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
 
         <item name="android:textColor">@color/textColor</item>
         <item name="fontFamily">@font/bicubik</item>
+        <item name="android:windowActionBar">true</item>
 
     </style>
 
