Add Like from Selected activity
1) Add Like from Selected activity
2) Add wallpaper sharing
3) Add result from Selected activity
4) Set Title for action bars

--- a/app/src/main/res/layout/fragment_select_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_select_wallpaper.xml
@@ -73,6 +73,7 @@
         app:layout_constraintTop_toTopOf="@+id/settingsWallpaperButton" />
 
     <include
+        android:id="@+id/like_button_include"
         layout="@layout/like_button"
         android:layout_width="75dp"
         android:layout_height="75dp"
