--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
+    android:label='"Обои"'
     app:startDestination="@id/listFragment">
 
     <fragment
         android:id="@+id/listFragment"
         android:name="com.zdy.wallpaperinstallapp.WallpapersList.WebList.UI.ListFragmentWeb"
-        android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
+        android:label="Обои"
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_listFragment_to_listFragmentLiked"
             app:destination="@id/listFragmentLiked"
@@ -21,6 +22,6 @@
     <fragment
         android:id="@+id/listFragmentLiked"
         android:name="com.zdy.wallpaperinstallapp.WallpapersList.LikedList.UI.ListFragmentLiked"
-        android:label="fragment_list_liked"
+        android:label="Избранное"
         tools:layout="@layout/fragment_list_liked" />
 </navigation>
