--- a/app/src/main/res/layout/like_button.xml
+++ b/app/src/main/res/layout/like_button.xml
@@ -3,8 +3,8 @@
     android:id="@+id/like_button"
     android:layout_width="50dp"
     android:layout_height="50dp"
-    android:background="@drawable/shape_radius"
-    android:backgroundTint="@color/black"
+    android:padding="10dp"
+    android:background="@drawable/background_button_filled"
     android:scaleType="centerCrop"
     android:src="@drawable/like_icon"
     >
