--- a/app/src/main/res/drawable/application_background.xml
+++ b/app/src/main/res/drawable/application_background.xml
@@ -5,6 +5,6 @@
 
     <gradient android:startColor="@color/white"
         android:angle="270"
-        android:endColor="@color/bottomBackground"/>
+        android:endColor="@color/buttonBackground"/>
 
 </shape>
