--- a/app/src/main/res/drawable/application_background_reverse.xml
+++ b/app/src/main/res/drawable/application_background_reverse.xml
@@ -4,5 +4,5 @@
 
     <gradient android:startColor="@color/white"
         android:angle="90"
-        android:endColor="@color/bottomBackground"/>
+        android:endColor="@color/buttonBackground"/>
 </shape>
