--- a/app/src/main/res/layout/fragment_select_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_select_wallpaper.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PickUpWallpaper.UI.SelectWallpaperFragment">
@@ -33,56 +33,70 @@
 
     <ProgressBar
         android:id="@+id/loadbar"
-        style="@style/Base.Theme.WallpaperInstallApp.progressBars"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="50dp"
         android:visibility="gone"
-
+        android:indeterminateDrawable="@drawable/loading_progressbar"
         app:layout_constraintBottom_toTopOf="@+id/image_container"
         app:layout_constraintEnd_toStartOf="@+id/image_container"
         app:layout_constraintStart_toEndOf="@+id/image_container"
         app:layout_constraintTop_toBottomOf="@+id/image_container" />
 
-    <ImageButton
-        android:id="@+id/settingsWallpaperButton"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/background_button_filled"
-        android:contentDescription="Apply to settings"
-        android:padding="15dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/baseline_app_settings_alt_24"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <ImageButton
-        android:id="@+id/shareWallpaperButton"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/background_button_filled"
-        android:contentDescription="@string/share_wallpaper"
-        android:padding="15dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ios_share_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/settingsWallpaperButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/settingsWallpaperButton"
-        app:layout_constraintTop_toTopOf="@+id/settingsWallpaperButton" />
+        <ImageButton
+            android:id="@+id/settingsWallpaperButton"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/background_button_filled"
+            android:contentDescription="Apply to settings"
+            android:padding="15dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_app_settings_alt_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/shareWallpaperButton"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:background="@drawable/background_button_filled"
+            android:contentDescription="@string/share_wallpaper"
+            android:padding="15dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ios_share_24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/settingsWallpaperButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/settingsWallpaperButton"
+            app:layout_constraintTop_toTopOf="@+id/settingsWallpaperButton" />
+
+        <include
+            android:id="@+id/like_button_include"
+            layout="@layout/like_button"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            app:layout_constraintBottom_toBottomOf="@+id/settingsWallpaperButton"
+            app:layout_constraintEnd_toStartOf="@+id/settingsWallpaperButton"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/settingsWallpaperButton" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <include
-        android:id="@+id/like_button_include"
-        layout="@layout/like_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="46dp"
-        app:layout_constraintBottom_toBottomOf="@+id/settingsWallpaperButton"
-        app:layout_constraintEnd_toStartOf="@+id/settingsWallpaperButton"
-        app:layout_constraintStart_toStartOf="@+id/image_container"
-        app:layout_constraintTop_toTopOf="@+id/settingsWallpaperButton" />
+        android:id="@+id/bottom_sheet_include"
+        layout="@layout/bottom_sheet"/>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
