--- a/app/src/main/res/layout/item_image_layout.xml
+++ b/app/src/main/res/layout/item_image_layout.xml
@@ -11,7 +11,8 @@
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:indeterminateDrawable="@drawable/loading_progressbar"
+        android:visibility="visible"/>
 
     <LinearLayout
         android:id="@+id/data_container"
