--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="bottomBackground">#73B5FB</color>
+    <color name="buttonBackground">#232323</color>
     <color name="textColor">#171717</color>
 </resources>
