--- a/app/src/main/res/layout/fragment_list_liked.xml
+++ b/app/src/main/res/layout/fragment_list_liked.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WallpapersList.LikedList.UI.ListFragmentLiked">
+    tools:context=".wallpapersList.LikedList.UI.ListFragmentLiked">
 
     <TextView
         android:id="@+id/noLikedText"
