--- a/app/src/main/res/layout/fragment_select_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_select_wallpaper.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PickUpWallpaper.UI.SelectWallpaperFragment">
+    tools:context=".pickUpWallpaper.UI.SelectWallpaperFragment">
 
 
     <FrameLayout
