--- a/app/src/main/res/navigation/nav_graph_pick_up_wallpaper.xml
+++ b/app/src/main/res/navigation/nav_graph_pick_up_wallpaper.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/selectWallpaperFragment"
-        android:name="com.zdy.wallpaperinstallapp.PickUpWallpaper.UI.SelectWallpaperFragment"
+        android:name="com.zdy.wallpaperinstallapp.pickUpWallpaper.UI.SelectWallpaperFragment"
         android:label="fragment_select_wallpaper"
         tools:layout="@layout/fragment_select_wallpaper" />
 </navigation>
