Delete fragments classes and layouts

--- a/app/src/main/res/layout/activity_liked.xml
+++ b/app/src/main/res/layout/activity_liked.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".wallpapersList.LikedList.UI.ListFragmentLiked">
+    tools:context=".wallpapersList.UI.LikedActivity">
+
 
     <TextView
         android:id="@+id/noLikedText"
@@ -25,7 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
