--- a/app/src/main/res/layout/activity_liked.xml
+++ b/app/src/main/res/layout/activity_liked.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".wallpapersList.UI.LikedActivity">
+    tools:context=".activity.likedList.LikedActivity">
 
 
     <TextView
