--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/place_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".wallpapersList.WebList.MainActivity">
+    tools:context=".activity.webList.MainActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
